# EspoCityLeague

./: .dockerignore  .gitignore  API.md  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_teams_matches_bets.py  0002_tables.py  0003_seed_teams.py  0004_seed_stages_matches.py  0005_seed_bets.py  0005_seed_future_stages_matches.py  0006_add_tie_breaking_fields.py  0006_relations_models.py  0007_update_stage_data.py
backend/app/: db.py  dependencies.py  main.py  security.py
backend/app/models/: bet.py  match.py  stage.py  team.py  user.py
backend/app/routers/: auth.py  bets.py  leaderboard.py  matches.py  stages.py  teams.py
backend/app/services/: tie_breaking.py
backend/docker/: server.json
docs/: README.md  screenshot-preview.html
docs/screenshots/: .gitkeep
frontend/: .dockerignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/Forms/: LoginForm.tsx
frontend/src/components/MatchCard/: MatchCard.scss  MatchCard.tsx
frontend/src/components/Sidebar/: Sidebar.scss  Sidebar.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/contexts/: SidebarContext.tsx  UserContext.tsx
frontend/src/pages/Games/: Games.scss  (+1 more)
frontend/src/routes/: AppRouter.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/utils/: stageUtils.ts
(+16 files in other folders)
