[tool.poetry]
name = "espocityleague-backend"
version = "0.1.0"
description = "EspoCityLeague backend service"
authors = ["Andre Morais <andre_morais98@hotmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }
alembic = "^1.13.0"
bcrypt = "^4.2.0"
PyJWT = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^24.0.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
